# rust_microservices

./: Cargo.toml  Dockerfile.authorization  Dockerfile.health-check  docker-compose.yaml
proto/: authentication.proto
src/auth-service/: auth.rs  main.rs  service.rs  sessions.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
