[package]
name = "rust_microservices"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
uuid = { version = "1.3.0", features = ["v4"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
tonic-build = "0.12.3"
